--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -223,13 +223,12 @@ en:
       delete_confirm: "Are you sure?"
       title_new: "New %{name}"
       title_edit: "Editing %{name}"
-    books:
-      pagination:
-        first: "« FIRST"
-        last: "LAST »"
-        previous: "‹ PREV"
-        next: "NEXT ›"
-        truncate: "…"
+    pagination:
+      first: "First"
+      last: "Last"
+      previous: "Prev"
+      next: "Next"
+      truncate: "Truncate"
   controllers:
     common:
       notice_create: "%{name} was successfully created."
