--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,39 +1,24 @@
 ja:
   activerecord:
     models:
-      book: "本"
+      book:
+        one: "本"
+        other: "本"
     attributes:
       book:
         title: "タイトル"
         memo: "メモ"
         author: "作家"
         picture: "画像"
-  books:
-    edit:
-      edit: "編集"
+  views:
+    common:
       show: "表示"
       back: "戻る"
-    index:
-      books: "本"
-      title: "タイトル"
-      memo: "メモ"
-      author: "作家"
-      picture: "画像"
-      show: "表示"
       edit: "編集"
       destroy: "削除"
       new_book: "新しい本"
       confirm_message: "本気ですか？"
-    new:
-      new_book: "新しい本"
-      back: "戻る"
-    show:
-      title: "タイトル"
-      memo: "メモ"
-      author: "作家"
-      picture: "画像"
-      back: "戻る"
-      edit: "編集"
+      title_edit: "編集"
   layouts:
     application:
       english: "英語"
