--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -218,6 +218,9 @@ ja:
       title_show: "%{name}の詳細"
       sign_out: ログアウト
       minimum_length: "%{length}文字以上"
+      new_report: "新しい日報"
+      create: "作成"
+      comment: "コメント"
     pagination:
       first: '最初'
       last: '最後'
