--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -215,6 +215,11 @@ ja:
       delete_confirm: よろしいですか？
       title_new: "%{name}の新規作成"
       title_edit: "%{name}の編集"
+      logged_in_as: 'としてログイン'
+      edit_profile: 'プロファイルの編集'
+      log_out: 'ログアウト'
+      sign_up: 'サインアップ'
+      log_in: 'ログイン'
     pagination:
       first: '最初'
       last: '最後'
