--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -220,6 +220,8 @@ ja:
       minimum_length: "%{length}文字以上"
       followers: フォロワー
       followings: フォロー
+      follow: フォローする
+      unfollow: フォローを削除する
     pagination:
       first: '最初'
       last: '最後'
